apps/mqtt/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mqtt
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
      - mqtt.bensonphillips.dev
      secretName: letsencrypt
  ingressClassName: "nginx"
  rules:
    - host: mqtt.bensonphillips.dev
      http:
        paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: mqtt-emqx
              port:
                  number: 18083
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mqtt-server
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
      - mqtt-server.bensonphillips.dev
      secretName: letsencrypt-server
  ingressClassName: "nginx"
  rules:
    - host: mqtt-server.bensonphillips.dev
      http:
        paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: mqtt-emqx
              port:
                  number: 1883
